src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Event_Quality_Details__c</fullName>
        <label>Event Quality Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Quality__c</fullName>
        <label>Event Quality</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Result__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01 - Doesn&apos;t Meet Any Success Critiera</fullName>
                </value>
                <value>
                    <fullName>02 - Doesn&apos;t Meet All Success Criteria</fullName>
                </value>
                <value>
                    <fullName>03 - Meets Success Criteria</fullName>
                </value>
                <value>
                    <fullName>04 - Exceeds Most Success Criteria</fullName>
                </value>
                <value>
                    <fullName>05 - Exceeds All Success Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LID__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <defaultValue>&quot;Scheduled&quot;</defaultValue>
        <inlineHelpText>Indicate the result of the event: Scheduled, Completed, Cancelled by AE, Cancelled by Contact, No Show</inlineHelpText>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled By Event Owner</fullName>
                </value>
                <value>
                    <fullName>Canceled By Contact</fullName>
                </value>
                <value>
                    <fullName>No Show By Contact</fullName>
                </value>
                <value>
                    <fullName>Did Not Connect</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Set_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates who set the meeting (as opposed to who the meeting is assigned to)</inlineHelpText>
        <label>Set By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cas_SDR_Follow_Up__c</fullName>
        <description>CAS Follow up Picklist</description>
        <label>SDR Follow Up - CAS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>William Merman</fullName>
                </value>
                <value>
                    <fullName>Jillian Smith</fullName>
                </value>
                <value>
                    <fullName>Stan Poblocki</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cas__Attempt_Type__c</fullName>
        <description>CAS Attempt types</description>
        <label>Attempt Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CASDialerAttempt</fullName>
                </value>
                <value>
                    <fullName>CASDialerConversation</fullName>
                </value>
                <value>
                    <fullName>CASLightingAttempt</fullName>
                </value>
                <value>
                    <fullName>CASLightningConversation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cas__CallType__c</fullName>
        <label>CAS Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CASLightning</fullName>
                </value>
                <value>
                    <fullName>CASDialer</fullName>
                </value>
                <value>
                    <fullName>CASAttempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cas__DispositionType__c</fullName>
        <label>Disposition Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Not Reached</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cas__Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Busy, Call Back Later</fullName>
                </value>
                <value>
                    <fullName>Call Back</fullName>
                </value>
                <value>
                    <fullName>Interest, Call Back Later</fullName>
                </value>
                <value>
                    <fullName>Meeting Scheduled</fullName>
                </value>
                <value>
                    <fullName>Interest, Send Information</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Incorrect Contact, No Referral</fullName>
                </value>
                <value>
                    <fullName>No Interest, No Reason Given</fullName>
                </value>
                <value>
                    <fullName>No Interest, Reason Given</fullName>
                </value>
                <value>
                    <fullName>Problem Connect</fullName>
                </value>
                <value>
                    <fullName>Not Reached</fullName>
                </value>
                <value>
                    <fullName>Direct Number</fullName>
                </value>
                <value>
                    <fullName>Fax Tone</fullName>
                </value>
                <value>
                    <fullName>Gatekeeper Block - Rem</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Pitcher Busy</fullName>
                </value>
                <value>
                    <fullName>Research Error.</fullName>
                </value>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
                <value>
                    <fullName>VM Dropped-Active</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Personleft- Rem</fullName>
                </value>
                <value>
                    <fullName>Wrong Number-Rem</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Incomplete Record</fullName>
                </value>
                <value>
                    <fullName>Target in Different Location</fullName>
                </value>
                <value>
                    <fullName>Bad Number</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cas__ListCategory__c</fullName>
        <label>List Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cas__ListName__c</fullName>
        <label>List Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cas__Meetings_Scheduled__c</fullName>
        <description>Value is 1 if disposition is &quot;Meeting Scheduled&quot;, otherwise value is 0.</description>
        <inlineHelpText>This field allows us to sum the number of meetings schedule per total conversations.</inlineHelpText>
        <label>Meetings Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cas__TalkCost__c</fullName>
        <label>Talk Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cas__TalkTime__c</fullName>
        <label>Talk Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cas__WaitCost__c</fullName>
        <label>Wait Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cas__WaitTime__c</fullName>
        <label>Wait Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cas__WrapCost__c</fullName>
        <label>Wrap Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cas__WrapTime__c</fullName>
        <label>Wrap Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>